image added but commented out

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
 .read-the-docs {
   color: #888;
 }
+
+.App {
+  /* background: url("https://media.drivingelectric.com/image/private/s--AymR0BqQ--/v1597772418/drivingelectric/2018-11/2cteslamodel3.jpg") center center/cover no-repeat ; */
+
+}
